cabal-version:      2.4
name:               liquidhaskell
version:            0.9.2.5.0
synopsis:           Liquid Types for Haskell
description:        Liquid Types for Haskell.
license:            BSD-3-Clause
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom
tested-with:        GHC == 9.2.5
extra-source-files: CHANGES.md
                    README.md

source-repository head
  type:     git
  location: https://github.com/ucsd-progsys/liquidhaskell/

flag devel
  default:     False
  manual:      True
  description: Enable more warnings and fail compilation when warnings occur.
               Turn this flag on in CI.

flag deterministic-profiling
  default:     False
  description: Support building against GHC with <https://phabricator.haskell.org/D4388>
               backported

flag mirror-modules-helper
  default:     False
  manual:      True
  description: Build the "mirror-modules" helper executable.

custom-setup
  setup-depends: Cabal<4, base<5, liquidhaskell-boot

library
  exposed-modules:    LiquidHaskell
                      GHC.Classes_LHAssumptions
                      GHC.CString_LHAssumptions
                      GHC.Types_LHAssumptions
  hs-source-dirs:     src

  build-depends:      base                 >= 4.11.1.0 && < 5,
                      liquidhaskell-boot   == 0.9.2.5.0,
                      ghc-prim
  default-language:   Haskell98
  ghc-options:        -Wall -fplugin=LiquidHaskellBoot

  if flag(devel)
    ghc-options:      -Werror

  if flag(deterministic-profiling)
    cpp-options: -DDETERMINISTIC_PROFILING
