Name:                liquidtypes 
Version:             0.0
Copyright:           2010-11 Ranjit Jhala, University of California, San Diego.
build-type:			 Simple
Synopsis:            Liquid Types for Haskell 
Description:         Liquid Types for Haskell.
License:             GPL
License-file:        LICENSE
Author:              Ranjit Jhala
Maintainer:          Ranjit Jhala <jhala@cs.ucsd.edu>
Category:            Language
Build-Type:          Simple
Cabal-version: >=1.2

Executable liquid 
  Build-Depends:     base, containers, filepath, parsec, mtl, 
                     ghc, ghc-paths, process, directory, hscolour, syb,
                     text, deepseq, cmdargs, filemanip

  Main-is:           Liquid.hs
  --ghc-options: -O -W
  Extensions: 

Library
   Build-Depends:    base, containers, filepath, parsec, mtl, 
                     ghc, ghc-paths, process, directory, hscolour, syb,
                     text, deepseq, cmdargs, filemanip, bifunctors 
  
  Exposed-Modules: 
    
  --ghc-options: -O -W
  Extensions: 

