name:               liquid-base
version:            0.8.6.0
synopsis:           Drop-in base replacement for LiquidHaskell
description:        Drop-in base replacement for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Simple
cabal-version:      >= 1.22

data-files:         src/Data/*.spec
                    src/System/*.spec
                    src/GHC/IO/Handle.spec
                    src/GHC/*.spec
                    src/Prelude.spec
                    src/Liquid/Prelude/*.spec
                    src/Foreign/C/*.spec
                    src/Foreign/*.spec
                    src/Debug/Trace.spec
                    src/Control/*.spec
                    src/Control/Exception/*.spec

library
  exposed-modules:  Data.Foldable
                    Data.Tuple
                    Data.Char
                    Data.Void
                    Data.Word
                    Data.Maybe
                    Data.Monoid
                    Data.Either
                    Data.Ord
                    Data.Proxy
                    Data.Bits
                    Data.List
                    Data.List.NonEmpty
                    Data.Int
                    Data.Function
                    Data.Functor
                    Data.String
                    Data.Ratio
                    Data.IORef
                    Data.Traversable
                    Data.Typeable
                    Data.Data
                    Debug.Trace
                    Control.Applicative
                    Control.Category
                    Control.Monad
                    Control.Monad.ST
                    Control.Exception
                    Control.Exception.Base
                    GHC.Base
                    GHC.Generics
                    GHC.Int
                    GHC.List
                    GHC.Num
                    GHC.TypeLits
                    GHC.Real
                    GHC.ST
                    GHC.Word
                    GHC.Ptr
                    GHC.Exts
                    GHC.ForeignPtr
                    GHC.IO
                    GHC.IO.Handle
                    Numeric
                    Foreign.C.Types
                    Foreign.C.String
                    Foreign.Concurrent
                    Foreign.Ptr
                    Foreign.ForeignPtr
                    Foreign.Storable
                    Foreign.Marshal.Alloc
                    System.IO
                    System.IO.Unsafe
                    Text.Read
                    Liquid.Prelude.Totality
                    Liquid.Prelude.Real
                    Liquid.Prelude.NotReal
                    Prelude
  hs-source-dirs:     src
  build-depends:      base                 >= 4.11.1.0 && < 5
                    , liquid-ghc-prim
                    , liquidhaskell        >= 0.8.6.0
  default-language:   Haskell98
  default-extensions: PackageImports
                      NoImplicitPrelude
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=Language.Haskell.Liquid.GHC.Plugin 
