name:               liquid-base
version:            0.8.10.1
synopsis:           Drop-in base replacement for LiquidHaskell
description:        Drop-in base replacement for LiquidHaskell.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom
cabal-version:      >= 1.22

data-files:         src/Data/*.spec
                    src/System/*.spec
                    src/GHC/IO/Handle.spec
                    src/GHC/*.spec
                    src/Prelude.spec
                    src/Liquid/Prelude/*.spec
                    src/Foreign/C/*.spec
                    src/Foreign/*.spec
                    src/Control/*.spec

custom-setup
  setup-depends: Cabal, base

library
  exposed-modules:  Control.Applicative
                    Control.Category
                    Control.Exception
                    Control.Exception.Base
                    Control.Monad
                    Control.Monad.ST
                    Control.Monad.ST.Unsafe
                    Data.Bifunctor
                    Data.Bits
                    Data.Char
                    Data.Data
                    Data.Either
                    Data.Foldable
                    Data.Function
                    Data.Functor
                    Data.Functor.Compose
                    Data.IORef
                    Data.Int
                    Data.List
                    Data.List.NonEmpty
                    Data.Maybe
                    Data.Monoid
                    Data.Ord
                    Data.Proxy
                    Data.Ratio
                    Data.String
                    Data.Traversable
                    Data.Tuple
                    Data.Typeable
                    Data.Version
                    Data.Void
                    Data.Word
                    Debug.Trace
                    Foreign
                    Foreign.C.String
                    Foreign.C.Types
                    Foreign.Concurrent
                    Foreign.ForeignPtr
                    Foreign.Marshal.Alloc
                    Foreign.Marshal.Array
                    Foreign.Marshal.Utils
                    Foreign.Ptr
                    Foreign.Storable
                    GHC.Base
                    GHC.Exts
                    GHC.ForeignPtr
                    GHC.Generics
                    GHC.IO
                    GHC.IO.Buffer
                    GHC.IO.BufferedIO
                    GHC.IO.Handle
                    GHC.IO.Handle.Internals
                    GHC.IO.Handle.Types
                    GHC.Int
                    GHC.List
                    GHC.Num
                    GHC.Ptr
                    GHC.Real
                    GHC.ST
                    GHC.TypeLits
                    GHC.Word
                    Numeric
                    System.Environment
                    System.Exit
                    System.IO
                    System.IO.Error
                    System.IO.Unsafe
                    Text.Read
                    Text.Printf
                    Liquid.Prelude.Totality
                    Liquid.Prelude.Real
                    Liquid.Prelude.NotReal
                    Prelude
  hs-source-dirs:     src
  build-depends:      base                 >= 4.11.1.0 && < 5
                    , liquid-ghc-prim
                    , liquidhaskell        >= 0.8.10.1
  default-language:   Haskell98
  default-extensions: PackageImports
                      NoImplicitPrelude
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
