cabal-version:      1.24
name:               liquid-bytestring
version:            0.10.10.0
synopsis:           LiquidHaskell specs for the bytestring package
description:        LiquidHaskell specs for the bytestring package.
license:            BSD3
license-file:       LICENSE
copyright:          2010-19 Ranjit Jhala & Niki Vazou & Eric L. Seidel, University of California, San Diego.
author:             Ranjit Jhala, Niki Vazou, Eric Seidel
maintainer:         Ranjit Jhala <jhala@cs.ucsd.edu>
category:           Language
homepage:           https://github.com/ucsd-progsys/liquidhaskell
build-type:         Custom

data-files:           src/Data/ByteString.spec
                      src/Data/ByteString/Short.spec
                      src/Data/ByteString/Lazy.spec
                      src/Data/ByteString/Unsafe.spec
                      src/Data/ByteString/Char8.spec
                      src/Data/ByteString/Lazy/Char8.spec

custom-setup
  setup-depends: Cabal, base, liquidhaskell

library
  exposed-modules:    Data.ByteString
                      Data.ByteString.Char8
                      Data.ByteString.Unsafe
                      Data.ByteString.Internal
                      Data.ByteString.Lazy
                      Data.ByteString.Lazy.Internal
                      Data.ByteString.Short
                      Data.ByteString.Short.Internal

                      Data.ByteString.Builder
                      Data.ByteString.Builder.Extra
                      Data.ByteString.Builder.Prim

                      Data.ByteString.Builder.Internal
                      Data.ByteString.Builder.Prim.Internal
                      Data.ByteString.Lazy.Builder
                      Data.ByteString.Lazy.Builder.Extras
                      Data.ByteString.Lazy.Builder.ASCII

                      -- FIXME: This is commented out as unfortunately it doesn't refine
                      -- correctly with modern versions of bytestring.
                      -- Data.ByteString.Lazy.Char8

  hs-source-dirs:     src
  build-depends:      liquid-base          < 5
                    , bytestring           >= 0.10.10.0 && < 0.11
                    , liquidhaskell        >= 0.8.10.1
  default-language:   Haskell2010
  default-extensions: PackageImports
  if impl(ghc >= 8.10)
    ghc-options: -fplugin=LiquidHaskell
